# aidialogs

./: .coverage  .dockerignore  .env.docker  .env.example  .env.prod  .gitignore  DEPLOYMENT-REMOTE.md  DOCKER-COMPOSE-REFERENCE.md  DOCKER-FILES-GUIDE.md  DOCKER.md  Dockerfile.api  Dockerfile.bot  Dockerfile.frontend  Makefile  QUICKSTART-PROD.md  README.md  TEST-INSTRUCTIONS.md  aidialogs-bot.service  aidialogs-watcher.service  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.registry.yml  docker-compose.yml  docker-entrypoint-bot.sh  env.docker.template  pyproject.toml  pytest.ini  reinstall-services.sh  setup-sudoers.sh  test_llm.py  tmp.txt
.cursor/commands/: review.md
.cursor/plans/: devops--e3f8f22c.plan.md  fs2-frontend-init-03c80ca9.plan.md  fs5-real-api-integration-4912c172.plan.md  s1-database-persistence-12085af5.plan.md  spri-622e4fb4.plan.md  sprint-3-dashboard-ba0d304e.plan.md
.cursor/rules/: conventions.mdc  qa_conventions.mdc  (+2 more)
.github/: REGISTRY.md
alembic/: env.py
data/: .gitignore
docs/: REGISTRY.md  github-actions-guide.md  idea.md  roadmap.md  tasklist.md  tasklist_tech_dept.md  vision.md  workflow_tech_debt.md
frontend/: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml
prompts/: system_prompt.txt
scripts/: git-watcher.sh  registry-pull.sh
src/: bot.py  config.py  database.py  llm_client.py  main.py  session_manager.py
tests/: test_bot.py  test_config.py  test_database.py  test_integration.py  test_llm_client.py  test_main.py  test_real_stat_collector.py  test_session_manager.py
(+72 files in other folders)
